feat: Enhance AI coaching and data display
This commit introduces several improvements to the Pera Road Race Analytics application:

- **Gemini AI Model Update:** Upgraded to `gemini-3-pro-preview` for more advanced reasoning in coaching reports. API key handling within `geminiService.ts` has been streamlined.
- **Dependency Update:** Added `url` dependency to `index.html` for improved compatibility.
- **RecordsList Optimization:** The `RecordsList` component now sorts events by frequency of entries across sessions and athlete personal bests, providing a more relevant display.
- **Static DB Update:** Updated `staticDb.ts` with a new version number and minor data adjustments.
- **Vite Configuration:** Ensured `vite.config.ts` correctly uses `__dirname` for environment variable loading and module resolution, enhancing ESM compatibility and preventing `process.cwd()` errors.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
     "vite": "https://aistudiocdn.com/vite@^7.2.6",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
-    "path": "https://aistudiocdn.com/path@^0.12.7"
+    "path": "https://aistudiocdn.com/path@^0.12.7",
+    "url": "https://esm.sh/url@^0.11.4"
   }
 }
 </script>
